backend/kubernetes/overlays/staging/container-resources.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convomark
spec:
  template:
    spec:
      containers:
      - name: backend
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 300Mi
            cpu: 300m
